--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,6 +3,7 @@
 <table>
   <thead>
     <tr>
+      <th>Event</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -10,6 +11,7 @@
   <tbody>
     <% @events.each do |event| %>
       <tr>
+        <td><%= event.description %></td>
         <td><%= link_to 'Show', event %></td>
         <td><%= link_to 'Edit', edit_event_path(event) %></td>
         <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
