defined destroy with session.clear in sessions controller and added 'Log Out' option to events index page; sessions now working

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -22,4 +22,5 @@
 
 <br>
 
-<%= link_to 'New Event', new_event_path %>
+<%= link_to 'New Event', new_event_path %> |
+<%= link_to 'Log Out', signout_path, method: :delete, data: { confirm: 'Are you sure?' } %>
