--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,37 @@
 <p id="notice"><%= notice %></p>
 
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <p>Hello World</p>
+      <p>Hello World</p>
+      <p>Hello World</p>
+      <p>Hello World</p>
+      <p>Hello World</p>
+    </div>
+
+    <div class="col-md-9">
+      <p>Hello World</p>
+      <p>Hello World</p>
+      <p>Hello World</p>
+      <p>Hello World</p>
+      <p>Hello World</p>
+       <p>Hello World</p>
+      <p>Hello World</p>
+      <p>Hello World</p>
+      <p>Hello World</p>
+      <p>Hello World</p>
+       <p>Hello World</p>
+      <p>Hello World</p>
+      <p>Hello World</p>
+      <p>Hello World</p>
+      <p>Hello World</p>
+    </div>
+
+  </div> <!-- row -->
+</div> <!-- container -->
+
+
 <p>
   <strong>Username:</strong>
   <%= @user.username %>
