added image_tag for .profile-pic to users show and styled in application.css

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,11 @@
 <div class="container">
   <div class="row">
     <div class="col-md-3">
-      <p>Hello World</p>
+      <div class="#">
+        <%= image_tag("#{@user.username}.jpg", class: "img-responsive profile-pic") %>
+
+
+      </div>
       <p>Hello World</p>
       <p>Hello World</p>
       <p>Hello World</p>
