moved layout header into _header and created _footer

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,6 +29,9 @@
           Joined <%= @user.created_at.strftime("%b %d, %Y") %>
         </div>
         <hr>
+        <button class="btn btn-lg btn-custom">Create New Event</button>
+
+
     </div>
 
     <div class="col-md-9">
@@ -36,19 +39,7 @@
       <%= render partial: 'events/list' %>
       <p>Hello World</p>
       <p>Hello World</p>
-      <p>Hello World</p>
-      <p>Hello World</p>
-      <p>Hello World</p>
-       <p>Hello World</p>
-      <p>Hello World</p>
-      <p>Hello World</p>
-      <p>Hello World</p>
-      <p>Hello World</p>
-       <p>Hello World</p>
-      <p>Hello World</p>
-      <p>Hello World</p>
-      <p>Hello World</p>
-      <p>Hello World</p>
+      
     </div>
 
   </div> <!-- row -->
