--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,9 +14,11 @@
  *= require_self
  */
 
- @import url(http://fonts.googleapis.com/css?family=Anton);
+ /*@import url(http://fonts.googleapis.com/css?family=Anton);*/
  @import url(http://fonts.googleapis.com/css?family=Montserrat);
- @import url(http://fonts.googleapis.com/css?family=Bree+Serif);
+/* @import url(http://fonts.googleapis.com/css?family=Bree+Serif);*/
+ /*@import url(http://fonts.googleapis.com/css?family=Lobster+Two);*/
+ @import url(http://fonts.googleapis.com/css?family=Lobster);
 
  
  .navbar-default {
@@ -46,6 +48,34 @@
  .profile-pic {
 
  	border-radius: 10px;
+
+ }
+
+
+ .btn-custom {
+
+ 		font-family: 'Montserrat', sans-serif;
+ 		background-color: #00b4ae;
+ 		color: #fff;
+
+ }
+
+ .btn-custom:hover {
+
+ 		color: #fff;
+
+
+ }
+
+
+ .footer-text {
+
+ 	font-family: 'Lobster', cursive;
+ 	/*font-family: 'Lobster Two', cursive;*/
+ 	color: #fff;
+ 	margin-top: 15px;
+ 	font-size: 1.25em;
+ 	word-spacing: 1.5px;
 
  }
 
