--- a/app/views/layouts/logged_in.html.erb
+++ b/app/views/layouts/logged_in.html.erb
@@ -1,21 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>WythMe</title>
-  <%= stylesheet_link_tag  '//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css', '//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css',        'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-
-	<nav class="navbar navbar-default" role="navigation">
-  	<div class="container-fluid">
-			<div class="navbar-header">	
-				<a class="navbar-brand" href="/">WythMe</a>
-			</div>	
-		</div>
-	</nav>
- <br>
+<%= render 'layouts/header' %>
 
  <!-- FLASH -->
 
@@ -25,5 +8,4 @@
 
  <%= debug(params) if Rails.env.development? %>
 
-</body>
-</html>
+<%= render 'layouts/footer' %>
