--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,10 @@
  *= require_self
  */
 
+
+
+/* User profile page*/
+
  /*@import url(http://fonts.googleapis.com/css?family=Anton);*/
  @import url(http://fonts.googleapis.com/css?family=Montserrat);
 /* @import url(http://fonts.googleapis.com/css?family=Bree+Serif);*/
@@ -76,6 +80,23 @@
  	margin-top: 15px;
  	font-size: 1.25em;
  	word-spacing: 1.5px;
+
+ }
+
+
+
+ /*Create New Event Page*/
+
+
+ #new_event {
+
+ 	border: 3px solid #00b4ae;
+  border-radius: 5px;
+ 	background-color: #f8f8f8;
+ 	padding: 20px 10px;
+ 	box-shadow: 3px 3px 3px 3px #777777;
+
+
 
  }
 
