--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -31,7 +31,7 @@
     <%= f.text_field :time %>
   </div>
 
-  <div class="actions">
+  <div class="actions text-center">
     <%= f.submit %>
   </div>
 <% end %>
