initial foray into joining events

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_event_path(@event) %> |
-<%= link_to 'Back', events_path %>
+<div>Event: <%= @event.description %> </div>
+<div>Location: <%= @event.location %> </div>
+
+
+
+
+
