--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New user</h1>
-
-<%= render 'form' %>
+<div class="row">
+ 	<div class="col-md-3 col-md-offset-3">
+ 		<h1>New user</h1>
+		<%= render 'form' %>
+	 </div>
+  <div class="col-md-3"></div>
+</div>
 
 <%= link_to 'Back', users_path %>
