--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,7 +1,8 @@
-<h1>New Event</h1>
-
-<%= render 'form' %>
-
-<br>
-
+<div class="row">
+ 	<div class="col-md-3 col-md-offset-3">
+ 		<h1>New Event</h1>
+			<%= render 'form' %>
+	 </div>
+  <div class="col-md-3"></div>
+</div>
 
