--- a/app/views/events/_list.html.erb
+++ b/app/views/events/_list.html.erb
@@ -1,21 +1,11 @@
-
-
-
-
-	
-
-
-
-
-
-
-			
+		
 <table class="table">
 	<thead>
 		<tr>
 			<th>Event</th>
 			<th>Location</th>
 			<th>Going</th>
+			<th>Join</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -27,6 +17,11 @@
 				<td><%= event.description %> </td>
 				<td><%= event.location %> </td>
 				<td><%= event.users.count %> </td>
+				<td> <%= link_to user_events_join_path(@user) do %>
+            <button class="btn btn-lg btn-custom">
+              Create New Event
+            </button>
+          <% end %> </td>
 			<% end %>
 			
 
