--- a/app/views/events/_list.html.erb
+++ b/app/views/events/_list.html.erb
@@ -17,8 +17,9 @@
 				<td><%= event.description %> </td>
 				<td><%= event.location %> </td>
 				<td><%= event.users.count %> </td>
-				<td> <%= form_tag user_events_join_path(event) do %>
-            <%= submit_tag %>
+				<td> <%= form_for(@attendee) do |f| %>
+						<%= f.hidden_field :event_id, value: event.id %>
+            <%= f.submit %>
           <% end %> </td>
 			<% end %>
 			
