added cool introspection gems; added check_attending method to attendees controller

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,6 +39,7 @@
     </div>
 
     <div class="col-md-9">
+      <h2 class="text-center">Happening Today</h2>
 
       <%= render partial: 'events/list' %>
      
