--- a/app/views/attendees/index.html.erb
+++ b/app/views/attendees/index.html.erb
@@ -3,6 +3,9 @@
 <table>
   <thead>
     <tr>
+      <th>Attendee Id</th>
+      <th>User Id</th>
+      <th>Event Id</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -10,6 +13,11 @@
   <tbody>
     <% @attendees.each do |attendee| %>
       <tr>
+         <td><%= attendee.id %></td>
+        <td><%= attendee.event_id %></td>
+        <td><%= attendee.user_id %></td>
+        
+        <td><%= link_to 'Show', attendee %></td>
         <td><%= link_to 'Show', attendee %></td>
         <td><%= link_to 'Edit', edit_attendee_path(attendee) %></td>
         <td><%= link_to 'Destroy', attendee, method: :delete, data: { confirm: 'Are you sure?' } %></td>
