played around more with destroying attendees

--- a/app/views/events/_list.html.erb
+++ b/app/views/events/_list.html.erb
@@ -24,7 +24,7 @@
             <%= f.submit %>
           <% end %> </td>
 
-         <td><%= link_to 'Unjoin', attendee_path(@attendee_destroy.map {|x| x.id }.join.to_i)  , method: :delete, data: { confirm: 'Are you sure?' } %></td>
+         <td><%= link_to 'Unjoin', attendee_path(@attendee_destroy.map {|attendee| attendee.id }.join.to_i)  , method: :delete, data: { confirm: 'Are you sure?' } %></td>
 
 
           
