Working version of joining and unjoining events

--- a/app/views/events/_list.html.erb
+++ b/app/views/events/_list.html.erb
@@ -24,7 +24,37 @@
             <%= f.submit %>
           <% end %> </td>
 
-         <td><%= link_to 'Unjoin', attendee_path(@attendee_destroy.map {|attendee| attendee.id }.join.to_i)  , method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% current_user.id %>
+
+          	<% event_attendee = event.attendees.find_by user_id: current_user.id %>
+
+          	<% if event_attendee.nil? %>
+
+          		<td> Not going!    </td>
+
+          	<% else %>
+
+          		 <td><%= link_to 'Unjoin', attendee_path(event_attendee.id)  , method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+
+          	<% end %>
+
+
+          
+
+         
+
+          
+
+          
+
+         
+
+           
+
+
+
+        
 
 
           
