--- a/app/views/events/_list.html.erb
+++ b/app/views/events/_list.html.erb
@@ -11,9 +11,6 @@
 	<tbody>
 		
 		<% @events.each do |event| %>
-		
-
-
 
 			<%= content_tag_for(:tr, event) do %>
 				<td><%= event.description %> </td>
@@ -24,48 +21,23 @@
             <%= f.submit %>
           <% end %> </td>
 
-          <% current_user.id %>
+        <!-- conditional logic for identifying whether or not a user is going to an event
+        and than passing the id of the attendee object to the attendee destroy path --> 
 
-          	<% event_attendee = event.attendees.find_by user_id: current_user.id %>
+        <% event_attendee = event.attendees.find_by user_id: current_user.id %>
 
-          	<% if event_attendee.nil? %>
+        <% if event_attendee.nil? %>
 
-          		<td> Not going!    </td>
+          <td> Not going!</td>
 
-          	<% else %>
+        <% else %>
 
-          		 <td><%= link_to 'Unjoin', attendee_path(event_attendee.id)  , method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'Unjoin', attendee_path(event_attendee.id)  , method: :delete, data: { confirm: 'Are you sure?' } %></td>
 
-
-          	<% end %>
-
-
-          
-
-         
-
-          
-
-          
-
-         
-
-           
-
-
-
-        
-
-
-          
-
+        <% end %>
         
 			<% end %>
 			
-
-
-		
-
 		<% end %>
 
 	</tbody>
