--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,37 +1,26 @@
-<h1>Listing users</h1>
+<p id="notice"><%= notice %></p>
 
-<table>
-  <thead>
-    <tr>
-      <th>Username</th>
-      <th>Email</th>
-      <th>Password digest</th>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>City</th>
-      <th>About</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="container">
+  <div class="row">
+    
+    <div class="col-md-3">
+      <br>
+      <br>
+      <%= render partial: 'form' %>
+    </div>
+    
 
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.username %></td>
-        <td><%= user.email %></td>
-        <td><%= user.password_digest %></td>
-        <td><%= user.first_name %></td>
-        <td><%= user.last_name %></td>
-        <td><%= user.city %></td>
-        <td><%= user.about %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <div class="col-md-9">
+      <h2 class="text-center">Happening Today</h2>
 
-<br>
+      <%= render partial: 'events/list_index' %>
+     
+      
+    </div>
 
-<%= link_to 'New User', new_user_path %>
+  </div> <!-- row -->
+</div> <!-- container -->
+
+
+
+
