--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -41,7 +41,7 @@
     <div class="col-md-9">
       <h2 class="text-center">Happening Today</h2>
 
-      <%= render partial: 'events/list' %>
+      <%= render partial: 'events/list_show' %>
      
       
     </div>
