added alternate views to navbar based on log-in-status/current users

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,17 @@
 
 
 
+/*Index page */
+
+
+.sign-in {
+
+	display: inline;
+
+
+}
+
+
 /* User profile page*/
 
  /*@import url(http://fonts.googleapis.com/css?family=Anton);*/
