addressed allowing password to be nil issues to get paperclip working; moved railsfactor_12 into prodution group to resolve double logging problem

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,9 @@
 
     <div class="col-md-3">
       <div class="profile-left">
-        <%= image_tag("#{@user.username.downcase}.jpg", class: "img-responsive profile-pic") %>
+
+        <%= image_tag @user.avatar.url, class: "img-responsive profile-pic" %>
+       
       </div>
        <div class="profile-left">
         <%= @user.username.capitalize %>
