--- a/app/views/users/_form_edit.html.erb
+++ b/app/views/users/_form_edit.html.erb
@@ -1,3 +1,7 @@
-<%= form_for @user, :url => users_path, :html => { :multipart => true } do |form| %>
-  <%= form.file_field :avatar %>
+<%= form_for @user, :url => user_path(@user), :html => { :multipart => true } do |f| %>
+  <%= f.file_field :avatar %>
+
+		<div class="actions">
+    <%= f.submit %>
+  	</div>
 <% end %>
