--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
     <div class="container-fluid">
     	<div class="row">
-    		<div class="col-md-4 col-md-offset-4 text-center footer-text">
+    		<div class="text-center footer-text">
     			Hecho en Miami con <i class="fa fa-coffee"></i>
     		</div>
     	</div>
