--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,8 +6,17 @@
     <div class="col-md-3">
       <br>
       <br>
+      <% if !current_user %>
       <%= render partial: 'form' %>
+    
+     <% else %>
+
+
+     <% end %>
+
     </div>
+
+
     
 
     <div class="col-md-9">
