--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<p class="text-center" id="notice"><%= notice %></p>
 
 <div class="container">
   <div class="row">
@@ -49,17 +49,33 @@
     </div>
 
     <div class="col-md-9">
-      <h2 class="text-center">Happening Today</h2>
 
-      <%= render partial: 'events/list_show' %>
+      <ul class="nav nav-tabs">
+        <li class="active"><a href="#events" data-toggle="tab">Events</a></li>
+        <li><a href="#profile" data-toggle="tab">Profile</a></li>
+      </ul>
+
+      <div class="tab-content">
+
+        <!-- may add a fadein effect  -->
+        <div class="tab-pane active" id="events">
+
+          <h2 class="text-center">Happening Today</h2>
+
+           <%= render partial: 'events/list_show' %>
+
+        </div>
+        <div class="tab-pane" id="profile">
+
+          <%= render partial: 'users/form_edit' %>
+
+        </div>
+ 
+      </div>
      
       
-    </div>
+    </div> <!-- col-md-9 -->
 
   </div> <!-- row -->
 </div> <!-- container -->
 
-
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
