--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,68 +1,60 @@
 <p class="text-center" id="notice"><%= notice %></p>
-
 <div class="container">
   <div class="row">
-    
-
     <div class="col-md-3">
       <div class="profile-left text-center">
-
+        
         <% if @user.avatar.url == "/images/original/missing.png" %>
           <i class="fa fa-coffee place-holder"></i>
-
         <% else %>
           <%= image_tag @user.avatar.url, class: "img-responsive profile-pic" %>
-
         <% end %>
 
-
       </div>
-       <div class="profile-left text-center">
-           <%= @user.username.capitalize %>
+      
+      <div class="profile-left text-center">
+           
+        <%= @user.username.capitalize %>
         
       </div>
       <hr>
-        <% if @user.city %>
-        <div class="profile-left">
-          <i class="fa fa-compass"></i> 
-          <%= @user.city %>
-        </div>
-        <% end %>
-         <% if @user.email %>
-         <div class="profile-left">
-          <i class="fa fa-envelope-o"></i>
-          <%= @user.email %>
-        </div>
-        <% end %>
-         <div class="profile-left">
-          <i class="fa fa-clock-o"></i>
-          Joined <%= @user.created_at.strftime("%b %d, %Y") %>
-        </div>
-        <hr>
-        
 
+        <% if @user.city %>
+
+          <div class="profile-left">
+            <i class="fa fa-compass"></i> 
+            <%= @user.city %>
+          </div>
+          <% end %>
+           <% if @user.email %>
+           <div class="profile-left">
+            <i class="fa fa-envelope-o"></i>
+            <%= @user.email %>
+          </div>
+          <% end %>
+           <div class="profile-left">
+            <i class="fa fa-clock-o"></i>
+            Joined <%= @user.created_at.strftime("%b %d, %Y") %>
+          </div>
+        <hr>
           <%= link_to user_events_new_path(@user) do %>
             <button class="btn btn-lg btn-custom">
               Create New Event
             </button>
           <% end %>
-    </div>
+   </div> <!-- col-md-3 -->
 
     <div class="col-md-9">
-
       <ul class="nav nav-tabs">
         <li class="active"><a href="#events" data-toggle="tab">Events</a></li>
         <li><a href="#profile" data-toggle="tab">Profile</a></li>
       </ul>
-
       <div class="tab-content">
-
         <!-- may add a fadein effect  -->
         <div class="tab-pane active" id="events">
-
           <h2 class="text-center">Happening Today</h2>
 
-           <%= render partial: 'events/list_show' %>
+          <%= render partial: 'events/list_show' %>
 
         </div>
         <div class="tab-pane" id="profile">
@@ -70,12 +62,8 @@
           <%= render partial: 'users/form_edit' %>
 
         </div>
- 
       </div>
-     
-      
     </div> <!-- col-md-9 -->
-
   </div> <!-- row -->
 </div> <!-- container -->
 
