--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,7 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<div>Event: <%= @event.description %> </div>
-<div>Location: <%= @event.location %> </div>
+<p> HELLO </p>
 
 
 
