--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<p id="notice text-center"><%= notice %></p>
 
 <div class="container">
   <div class="row">
@@ -6,27 +6,22 @@
     <div class="col-md-3">
       <br>
       <br>
+      
       <% if !current_user %>
-      <%= render partial: 'form' %>
+        <%= render partial: 'form' %>
     
      <% else %>
-
 
      <% end %>
 
     </div>
 
-
-    
-
     <div class="col-md-9">
       <h2 class="text-center">Happening Today</h2>
 
       <%= render partial: 'events/list_index' %>
-     
       
     </div>
-
   </div> <!-- row -->
 </div> <!-- container -->
 
