--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,8 +1,64 @@
 <p id="notice"><%= notice %></p>
 
-<p> HELLO </p>
+<!-- Event Owner  -->
+
+<div class="row">
+	<div class="col-md-4 col-md-offset-4">
+		<h2><%= @event.description %></h2>
+		<hr>
+		
+		<% if !@event.location.nil? %>
+			<p><em>Meet at:</em><%= @event.location.capitalize %> </p>
+		<% end %> 
+
+		<% if !@event.date.nil? %>
+			<p><em>Date:</em><%= @event.date %> </p>
+		<% end %> 
+
+		<% if !@event.date.nil? %>
+			<p><em>Time:</em><%= @event.time %> </p>
+		<% end %> 
+
+		<hr> 
+
+		<!-- feel like I'm about to need a method -->
+		<div>
+
+
+		Organizer: <%= image_tag @event_owner.avatar.url(:thumb), class: "organizer pull-right" %>
+		<br>
+		<br>
+		<br>
+		<br>
+
+		<p>Going:</p>
+
+		<% if !@attendees.nil? %>
+			<%= render 'list_attendees' %>
+		<% else %>
+			<p>No users yet!</p>
+		<% end %> 
+
+		</div>
+
+		
+
+	</div>	
+
+<!-- Meeting Date, Time  -->
+
+<!-- Meeting Location  -->
+
+<!-- Going -->
+
+
+<!-- Join/Unjoin -->
+
+	<div class="col-md-4">
 
 
 
+	</div>	
 
+</div> 
 
