added capitalize to event description in _list_show

--- a/app/views/events/_list_show.html.erb
+++ b/app/views/events/_list_show.html.erb
@@ -15,7 +15,7 @@
 			<%= content_tag_for(:tr, event) do %>
 				<td>
 					<%= link_to event_path(event) do %>
-							<%= event.description %> 
+							<%= event.description.capitalize %> 
 					<% end %>
 				</td>
 				<td><%= event.location %> </td>
