--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -23,12 +23,12 @@
 
   <div class="field">
     <%= f.label :date  %>
-    <%= f.text_field :date %>
+    <%= f.date_field :date %>
   </div>
 
   <div class="field">
     <%= f.label :time %>
-    <%= f.text_field :time %>
+    <%= f.time_field :time %>
   </div>
 
   <div class="actions text-center">
