--- a/app/views/events/_list_show.html.erb
+++ b/app/views/events/_list_show.html.erb
@@ -4,6 +4,7 @@
 			<th>Event</th>
 			<th>Location</th>
 			<th>Number Going</th>
+			<th>Happening</th>
 			<th>Your Event Status</th>
 			
 		</tr>
@@ -20,6 +21,10 @@
 				</td>
 				<td><%= event.location %> </td>
 				<td><%= event.users.count %> </td>
+
+				<td>
+					<% from_time = Time.now %>
+					<%= distance_of_time_in_words(from_time, from_time + 50.minutes) %></td>
 				<td> 
 					<!-- identify whehter the current user is an attendee of the event being iterated through
 					it feels like this method belongs in the users_controller but it is making use of 
