--- a/app/views/events/_list_show.html.erb
+++ b/app/views/events/_list_show.html.erb
@@ -24,7 +24,9 @@
 
 				<td>
 					<% from_time = Time.now %>
-					<%= distance_of_time_in_words(from_time, from_time + 50.minutes) %></td>
+
+					<!-- need to figure out how to properly work with dates, until then... -->
+					in <%= distance_of_time_in_words(from_time, from_time + 50.minutes) %></td>
 				<td> 
 					<!-- identify whehter the current user is an attendee of the event being iterated through
 					it feels like this method belongs in the users_controller but it is making use of 
