clening up main view a bit

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,19 +2,19 @@
 <div class="container">
   <div class="row">
     <div class="col-md-3">
-      <div class="profile-left text-center">
+      <div class="profile-left">
         
         <% if @user.avatar.url == "/images/original/missing.png" %>
           <i class="fa fa-coffee place-holder"></i>
         <% else %>
           <%= image_tag @user.avatar.url, class: "img-responsive profile-pic" %>
         <% end %>
-
+        <h4><%= @user.username.capitalize %></h4>
       </div>
       
       <div class="profile-left text-center">
            
-        <%= @user.username.capitalize %>
+        
         
       </div>
       <hr>
