added clas methodself.order_by_time to sort events in ascending order

--- a/app/views/events/_list_show.html.erb
+++ b/app/views/events/_list_show.html.erb
@@ -11,7 +11,7 @@
 	</thead>
 	<tbody>
 		
-		<% @events.each do |event| %>
+		<% @events.order_by_time.each do |event| %>
 
 		<% if event.has_not_passed? %>
 
