--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -16,6 +16,16 @@
     <%= f.text_field :description %>
   </div>
 
+ <div class="field">
+<select name="event[category]">
+  <option value="">Event Categroy</option>
+  <option value="Food & Drink">Food & Drink</option>
+  <option value="Exercise">Exercise</option>
+  <option value="Entertainment">Entertainment</option>
+  <option value="Other">Other</option>
+</select>
+</div>
+
   <div class="field">
     <%= f.label :location %>
     <%= f.text_field :location %>
