--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -16,12 +16,24 @@
     <%= f.text_field :description %>
   </div>
 
- <div class="field">
+<!--  <div class="field">
 <select name="event[category]">
   <option value="">Event Categroy</option>
   <option value="Food & Drink">Food & Drink</option>
   <option value="Exercise">Exercise</option>
   <option value="Entertainment">Entertainment</option>
+  <option value="Other">Other</option>
+</select>
+</div>
+ -->
+
+ <div class="field">
+<select name="event[neighborhood]">
+  <option value="">Neighborhood</option>
+  <option value="Wynwood">Wynwood</option>
+  <option value="Brickell">Brickell</option>
+  <option value="Downtown">Downtown</option>
+  <option value="South Beach">South Beach</option>
   <option value="Other">Other</option>
 </select>
 </div>
