added validations to event model and altered event form

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -44,6 +44,12 @@
   </div>
 
   
+   <div class="field">
+    <%= f.label :street_address %>
+    <%= f.text_field :street_address %>
+    <%= f.label :zip_code %>
+    <%= f.text_field :zip_code %>
+  </div>
 
   <!-- datetime_local_field? -->
 
