added more info to event show page and join/unjoin button

--- a/app/views/events/_list_show.html.erb
+++ b/app/views/events/_list_show.html.erb
@@ -2,7 +2,7 @@
 	<thead>
 		<tr>
 			<th>Event</th>
-			<th>Location</th>
+			<th>Neighborhood</th>
 			<th>Number Going</th>
 			<th>Happening</th>
 			<th>Your Event Status</th>
@@ -21,7 +21,7 @@
 							<%= event.description.capitalize %> 
 					<% end %>
 				</td>
-				<td><%= event.location %> </td>
+				<td><%= event.neighborhood %> </td>
 				<td><%= event.users.count %> </td>
 
 				<td>
