altered buttons a bit

--- a/app/views/events/_list_show.html.erb
+++ b/app/views/events/_list_show.html.erb
@@ -40,14 +40,22 @@
 					
 					<% if event_attendee.nil? %>
 
-						<%= form_for(@attendee) do |f| %>
+						<%= form_for @attendee, :html => {:class => 'btn btn-sm btn-custom'} do |f| %>
 							<%= f.hidden_field :event_id, value: event.id %>
 	            <%= f.submit %>
 	          <% end %> 
 
+	         
+
 	        <% else %>
 
-	        	<%= link_to 'Unjoin', attendee_path(event_attendee.id)  , method: :delete, data: { confirm: 'Are you sure?' } %>
+	         <%= link_to attendee_path(event_attendee.id), method: :delete, data: { confirm: 'Are you sure?' }   do %>
+            <button class="btn btn-lg btn-custom">
+              Unjoin
+            </button>
+          <% end %>
+
+	        	
 
 	       	<% end %>
 
