--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -47,6 +47,9 @@
    <div class="field">
     <%= f.label :street_address %>
     <%= f.text_field :street_address %>
+  </div>
+
+  <div class="field">
     <%= f.label :zip_code %>
     <%= f.text_field :zip_code %>
   </div>
