--- a/app/views/events/_list_show.html.erb
+++ b/app/views/events/_list_show.html.erb
@@ -40,9 +40,9 @@
 					
 					<% if event_attendee.nil? %>
 
-						<%= form_for @attendee, :html => {:class => 'btn btn-sm btn-custom'} do |f| %>
+						<%= form_for @attendee do |f| %>
 							<%= f.hidden_field :event_id, value: event.id %>
-	            <%= f.submit %>
+	            <%= f.submit "Join Event", :class => "btn btn-md btn-custom" %>
 	          <% end %> 
 
 	         
@@ -50,7 +50,7 @@
 	        <% else %>
 
 	         <%= link_to attendee_path(event_attendee.id), method: :delete, data: { confirm: 'Are you sure?' }   do %>
-            <button class="btn btn-lg btn-custom">
+            <button class="btn btn-md btn-custom">
               Unjoin
             </button>
           <% end %>
