--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,13 +46,14 @@
 
     <div class="col-md-9">
       <ul class="nav nav-tabs">
-        <li class="active"><a href="#events" data-toggle="tab">Events</a></li>
+        <li class="active"><a href="#events" data-toggle="tab">Happening Today</a></li>
         <li><a href="#profile" data-toggle="tab">Profile</a></li>
       </ul>
       <div class="tab-content">
         <!-- may add a fadein effect  -->
         <div class="tab-pane active" id="events">
-          <h2 class="text-center">Happening Today</h2>
+          <br>
+          <br>
 
           <%= render partial: 'events/list_show' %>
 
