--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
 
 			<!-- different views in the navbar based on log-in-status/current user -->
 
-			<div class="pull-right">
+			<div class="pull-right nav-links">
 			<% if current_user %>
 					<span>
 							<%= link_to user_path(current_user) do %>
