--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+<footer class="navbar navbar-default">
     <div class="container-fluid">
     	<div class="row">
     		<div class="text-center footer-text">
@@ -6,7 +6,7 @@
     		</div>
     	</div>
 		</div>
-</nav>
+</footer>
   
   </body>
 </html>
