changed capitalization of username in header and left hand side of show page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,7 +24,7 @@
 									<% if current_user.first_name && current_user.first_name != "" %>
 											<%= current_user.first_name.capitalize %>!
 									<% else %>
-									<%= current_user.username.capitalize %>!
+									<%= current_user.username %>!
 								<% end %>
 							<% end %>
 
