--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -217,6 +217,21 @@
 
 }
 
+/*Create Event Modal*/
+
+.modal-header {
+
+	background-color:  #00b4ae;
+	color: #fff;
+
+
+}
+
+.modal-body {
+	 background-color:rgba(255,255,255,0.8);
+
+}
+
 
 
 
